updated project with some new stuff around autoboxing