@@ -1,4 +1,5 @@
 import java.math.BigInteger;
+import java.util.Arrays;
 import java.util.List;
 import java.util.concurrent.ExecutionException;
 import java.util.concurrent.ExecutorService;
@@ -9,6 +10,8 @@ import java.util.function.Consumer;
 public class PrimeFinder {
 	
 	Consumer<BigInteger> divisorConsumer = l -> {};//do not consume the divisors by default
+
+	public final BigInteger two = BigInteger.valueOf(2) ;
 	
 	public PrimeFinder() {}
 	
@@ -21,14 +24,14 @@ public class PrimeFinder {
 		if (checkKnownNonPrimes(primeCandidate)){
 			return false;
 		}
-		if (primeCandidate.equals(BigInteger.TWO)) {
+		if (primeCandidate.equals(two)) {
 			return true;
 		}
-		if (primeCandidate.mod(BigInteger.TWO).equals(BigInteger.ZERO)) {
+		if (primeCandidate.mod(two).equals(BigInteger.ZERO)) {
 			return false;
 		}
-		BigInteger takeWhile = primeCandidate.divide(BigInteger.TWO);
-		BigInteger halfOfTakeWhile = takeWhile.divide(BigInteger.TWO);
+		BigInteger takeWhile = primeCandidate.divide(two);
+		BigInteger halfOfTakeWhile = takeWhile.divide(two);
 		ExecutorService executor = Executors.newFixedThreadPool(2);
 		Future<Boolean> doesDivide1 = executor.submit(() -> doAnyOfTheseDivisorsDivideThePrimeCandididate(new BigInteger("3"),halfOfTakeWhile, primeCandidate));
 		Future<Boolean> doesDivide2 = executor.submit(() -> doAnyOfTheseDivisorsDivideThePrimeCandididate(halfOfTakeWhile, takeWhile, primeCandidate));
@@ -44,39 +47,39 @@ public class PrimeFinder {
 		if (checkKnownNonPrimes(primeCandidate)){
 			return false;
 		}
-		if (primeCandidate.equals(BigInteger.TWO)) {
+		if (primeCandidate.equals(two)) {
 			return true;
 		}
-		if (primeCandidate.mod(BigInteger.TWO).equals(BigInteger.ZERO)) {
+		if (primeCandidate.mod(two).equals(BigInteger.ZERO)) {
 			return false;
 		}
-		BigInteger lastPossibleDivisor = primeCandidate.divide(BigInteger.TWO);
+		BigInteger lastPossibleDivisor = primeCandidate.divide(two);
 		BigInteger divider = new BigInteger("3");
 		while (divider.compareTo(lastPossibleDivisor)<=0){
 			if (doesDivide(divider,primeCandidate)){
 				return false;
 			}
-			divider = divider.add(BigInteger.TWO);
+			divider = divider.add(two);
 		}
 		return true;
 	}
 
 	private boolean checkKnownNonPrimes(BigInteger primeCandidate) {
-		return List.of(0,1).contains(primeCandidate.intValue());
+		return  Arrays.asList(0,1).contains(primeCandidate.intValue());
 	}
 	
 	private boolean doAnyOfTheseDivisorsDivideThePrimeCandididate(BigInteger start, BigInteger end, BigInteger primeCandidate) {
-		if (start.compareTo(BigInteger.TWO)==-1) {
+		if (start.compareTo(two)==-1) {
 			start = new BigInteger("3");
 		}
-		if (start.mod(BigInteger.TWO).equals(BigInteger.ZERO)) {
+		if (start.mod(two).equals(BigInteger.ZERO)) {
 			start = start.add(BigInteger.ONE);
 		}
 		while (start.compareTo(end)==-1) {
 			if (doesDivide(start, primeCandidate)) {
 				return true;
 			}
-			start = start.add(BigInteger.TWO);
+			start = start.add(two);
 		}
 		return false;
 	}
